Adds loop search and category lookup

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
   "sourceMaps": true,
   "presets": ["react"],
-  "plugins": ["transform-async-to-generator"]
+  "plugins": ["transform-async-to-generator", "transform-object-rest-spread"]
 }
