--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   },
   "main": "dist/index.js",
   "dependencies": {
+    "express": "^4.16.2",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-github2": "^0.1.11",
+    "passport-google-oauth20": "^1.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
-    "redux-jetpack": "0.0.2"
+    "redux-jetpack": "0.0.2",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
